final final i think

--- a/report/aiprog2Report.tex
+++ b/report/aiprog2Report.tex
@@ -66,18 +66,18 @@
  
 \section{Working GPS}
 Please refer to the delivered code.
-We have included a textfile for each problem with some strings of inputs to easily test the program for various configurations. We are somewhat uncertain what you wanted in the "Demonstration" sections. So we have described how we solved the problems internally and if you use the provided inputs it should be quite easy to verify that our code solves the different puzzles on all difficulties with Minimum Conflict, as well as the easy case for SA (and a few runs where the medium case also is solved by SA).
+We have included a textfile for each problem with some strings of inputs to easily test the program for various configurations. We are somewhat uncertain what you wanted in the "Demonstration" sections. So we have described how we solved the problems internally and if you use the provided inputs it should be quite easy to verify that our code solves the different puzzles on all difficulties with Minimum Conflict, as well as the easy case for SA (and a few runs where the medium case is also solved by SA).
 
-\section{Diagram}
+\section{Main classes and methods}
 \begin{figure}[H] \includegraphics[width=15cm]{2_Diagram}
 
-\caption{Diagram}
+\caption{Diagram of the main classes}
 \label{diagram}
 \end{figure}
-The figure shows our implementation, the first class CBLocalSearch takes care of the input from the user - number of runs, type of puzzle, type of algorithm and such. It then intiates a call to either GeneralSA or GeneralMinConflict which inherits from LocalSearch. Both these classes take in the manager of each puzzle, and the manager takes care of creating the initial state, this is done by calling the createInitState() method in each manager, the CurrentState is thus set to the intialState, but CurrentState gets updated as the algorithms do their thing. It also needs to call on updateConflicts() so we know how the currentState looks regarding to the constraints it must follow.\\
+The figure shows our implementation, the first class CBLocalSearch takes care of the input from the user - number of runs, type of puzzle, type of algorithm and such. It then intiates a call to either GeneralSA or GeneralMinConflict which inherits from LocalSearch. Both these search-algorithm classes take in the manager of the selected puzzle and stores it in the superclass LocalSearch. The manager takes care of creating the initial state, this is done by calling the createInitState() method in each manager, the CurrentState is thus set to the intialState, and the CurrentState gets updated as the algorithms do their thing. It also needs to call on updateConflicts() so we know how the currentState looks regarding to the constraints it must follow.\\
 The CBLocalSearch initializes a new search by calling the constructor of one the subclasses of LocalSearch, either GeneralSA or GeneralMinConflict, which in turn calls on the solve() method specific to the current algorithm. From here there's two routes depending on which algorithm we have decided to use, let us take look into the SA algorithm first. The generalSA class calls the createChildren() method in the manager which creates 20 children and returns them, then a call to the manager is invoked with the findBestChild() method, which returns the state with the highest \textbf{F}-value. \\
-The minConflict class on the other hand calls on the findBestNeighbor() method which is supposed to find a random location and minimize the conflict given the constraints. It then runs updateConflict() in the findBestNeighbor() method, this method updates the number of conflict and the conflict array so the next iteration has a correct indication of where it can go to work. It also requires the getGoalState() method so as to know when to terminate the search.\\
-The code we've written tries to make the implementation as general as possible, the only thing needed to add a new puzzle is to add a manager and a new state type for the puzzle, the new state inherits the \textbf{F}-value and crashes from State, and needs to hold stuff specific to that problem as well as a few fields that might be used for printing out the final end state. The new manager class is required (by inheriting from StateManager) to have a constructor which calls the createInitState() which creates the initial state, as well as an implementation of updateConflicts(). For SA it needs a createChildren() method which returns an arrayList of states for the given puzzle, and a calculateF(State) which calculates the objective function for the given State. For MinConflict it needs to implement findBestNeighbor() which minimizes conflicts as well as the getGoalState() method so that minConflict knows when to terminate the search.
+The minConflict class on the other hand calls on the findBestNeighbor() method which is supposed to find a random location with a conflict and minimize the conflicts given the constraints. It then runs updateConflict() in the findBestNeighbor() method, this method updates the number of conflict and the conflict array so the next iteration has a correct indication of where it can go to work. It also requires the getGoalState() method so as to know when to terminate the search.\\
+The code we've written tries to make the implementation as general as possible, the only thing needed to add a new puzzle is to add a manager and a new state type for the puzzle, the new state inherits the \textbf{F}-value and crashesCount from State, and needs to hold stuff specific to that problem as well as a few fields that might be used for printing out the final end state. The new manager class is required (by inheriting from StateManager) to have a constructor which calls the createInitState() which creates the initial state, as well as an implementation of updateConflicts(). For SA it needs a createChildren() method which returns an arrayList of states for the given puzzle, and a calculateF(State) which calculates the objective function for the given State. For MinConflict it needs to implement findBestNeighbor() which minimizes conflicts as well as the getGoalState() method so that minConflict knows when to terminate the search.
 \section{Third Puzzle}
 Our third puzzle is Sudoku, we have however modified the rules a bit because it makes it easier to implement and we feel that this modification fits the scheme of a scaling constraint satisfaction problem better.\\
 The difference between this and the normal Sudoku is the fact that the normal sudoku is usually a board of 3x3 numbered grids (with numbers ranging from and including 1 to and including 9), and the board is pre-filled with some numbers already, these numbers are not allowed to be changed whatsoever.\\
@@ -231,8 +231,8 @@ However if we run Minimum-Conflict, and on this iteration randomly choose to alt
 \end{verbatim}
 \noindent
 Thus the algorithm would move the queen at row 7 from column 3 to 2 and thereby reaching a goal state. (Which is shown in the next section)
-
-If we were to encounter a node where there are no options with fewer or the same number of conflicts no matter which column it goes to, the algorithm marks this row so that it will avoid trying the same row again on the next iteration. This a small tweak so as to avoid getting locked on trying the same row several times without moving anywhere. 
+\\
+If we were to encounter a node where there are no options with fewer or the same number of conflicts no matter which column it goes to, the algorithm marks this row so that it will avoid trying the same row again on the next iteration. This is a small tweak meant to avoid getting locked on trying the same row several times without moving anywhere. 
 
 \section{Result table of K-queens, and a description of an easy-case}
 One of the solutions found for the easy-case (k=8)
