--- a/report/aiprog3Report.tex
+++ b/report/aiprog3Report.tex
@@ -77,7 +77,7 @@ All the runs we do in Task 1 (b and c) are done with full social topology.
 $c_1$ and $c_2$ are set to both be 0.5. These numbers do not seem to have any impact on the runs, however we decided to use 0.5 because that's what the "studass" suggested when we had problems with our code.
 
 \subsection{Task a}
-See the code provided and refer to the demonstration.
+See the code provided (run circle.java file - new Circle(dimensions, lowerCap, upperCap, neighbour, inertia) are the parameters needed) and refer to the demonstration.
 
 \subsection{Task b}
 
@@ -130,12 +130,11 @@ This task uses k-nearest neighbor topology. The particles will only update the $
 1D and 2D run of 3 nearest neighbor without decreasing inertia weight.
 
 \begin{figure}[H]
-\begin{center}
 
-
+\includegraphics{3nn_no_inertia}
 \caption{runs of 1d and 2d problem with 3 nearest neighbor topology, no decreasing inertia weight\\
-Red small line is 1d, Blue one is 2d}
-\end{center}
+Magenta small line is 1d, Blue one is 2d}
+
 
 \end{figure}
 \subsection{Task b}
@@ -143,12 +142,48 @@ Red small line is 1d, Blue one is 2d}
 $\vec{v}(t+1)=(w*\vec{v}(t))+(c_1*r_1*(\vec{p}(t)-\vec{x}(t))) +(c_2*r_2*(\vec{g}(t)-\vec{x}(t)))$
 \begin{figure}[H]
 \begin{center}
-
+\includegraphics{3nn_with_inertia}
 \caption{runs of 1d and 2d problem with 3 nearest neighbor topology with deacreasing inertia weight\\
-Red small line is 1d, Blue one is 2d}
+Magenta small line is 1d, Blue one is 2d}
+\end{center}
+
+\end{figure}
+\section{Task 3}\label{3}
+For this task we decided to use the binary knapsack solution as suggested by the lecturer. Every particle have n dimensions (where n is number of packages) and for every dimension there's either a position 0 or 1 that shows if the package is included or not.
+In other (more precise words):
+For every particle there's n number of dimensions, $x_j$ can either be 0 or 1.
+If $x_j = 1$ then package number $j$ is included in the container, if $x_k = 0$ then package number $k$ is not included in the container.
+
+\subsection{Task a}
+See the code provided (run Knapsack\_problem.java - new Knapsack\_problem(dimensions, numParticles, lowerCap, upperCap, inertia, maxIter, volume) are the parameters needed) and refer to the demonstration.
+
+\subsection{Task b}
+\begin{figure}[H]
+\begin{center}
+%\includegraphics{picture here}
+\caption{3 runs of the knapsack particle problem, 4000 particles. Graph show global fitness}
 \end{center}
 
 \end{figure}
 
+
+
+\subsection{Task c}
+\begin{figure}[H]
+\begin{center}
+%\includegraphics{picture here}
+\caption{3 runs of the knapsack particle problem, 4000 particles, decreasing inertia weight. Graph show global fitness}
+\end{center}
+\end{figure}
+
+\section{Task 4}
+The Knapsack PSO problem from Task \ref{3} is extended with random volume values for each package. These values range from $1m^3$ to $5m^3$, however due to a notice on It's learning we decreased the max volume from $1000m^3$ to $250m^3$.
+\begin{figure}[H]
+\begin{center}
+%\includegraphics{picture here}
+\caption{A run of knapsack PSO with volume restrictions.}
+\end{center}
+
+\end{figure}
 
 \end{document}
