code cleanup and added faster speeds to all around

--- a/report/aiprog3Report.tex
+++ b/report/aiprog3Report.tex
@@ -161,7 +161,7 @@ See the code provided (run Knapsack\_problem.java - new Knapsack\_problem(dimens
 \begin{figure}[H]
 \begin{center}
 %\includegraphics{picture here}
-\caption{3 runs of the knapsack particle problem, 4000 particles. Graph show global fitness}
+\caption{3 runs of the knapsack particle problem, 4000 particles. Graph shows global fitness}
 \end{center}
 
 \end{figure}
@@ -172,7 +172,7 @@ See the code provided (run Knapsack\_problem.java - new Knapsack\_problem(dimens
 \begin{figure}[H]
 \begin{center}
 %\includegraphics{picture here}
-\caption{3 runs of the knapsack particle problem, 4000 particles, decreasing inertia weight. Graph show global fitness}
+\caption{3 runs of the knapsack particle problem, 4000 particles, decreasing inertia weight. Graph shows global fitness}
 \end{center}
 \end{figure}
 
