--- a/report/aiprog3Report.tex
+++ b/report/aiprog3Report.tex
@@ -131,7 +131,7 @@ This task uses k-nearest neighbor topology. The particles will only update the $
 
 \begin{figure}[H]
 
-\includegraphics{3nn_no_inertia}
+\includegraphics[width=\linewidth]{3nn_no_inertia}
 \caption{runs of 1d and 2d problem with 3 nearest neighbor topology, no decreasing inertia weight\\
 Magenta small line is 1d, Blue one is 2d}
 
@@ -144,7 +144,7 @@ The inertia weight $w$ decreases from 1.0 to 0.4, the decrease rate depends on t
 $ for each iteration.
 \begin{figure}[H]
 \begin{center}
-\includegraphics{3nn_with_inertia}
+\includegraphics[width=\linewidth]{3nn_with_inertia}
 \caption{runs of 1d and 2d problem with 3 nearest neighbor topology with decreasing inertia weight\\
 Magenta small line is 1d, Blue one is 2d}
 \end{center}
