--- a/report/aiprog3Report.tex
+++ b/report/aiprog3Report.tex
@@ -164,7 +164,7 @@ The code can be run yourself by running the main inside the runPSO.java file.
 \subsection{Task b}
 \begin{figure}[H]
 \begin{center}
-\includegraphics[width=18cm]{KnapSack_noInertia}
+\includegraphics[width=\linewidth]{KnapSack_noInertia}
 \caption{3 runs of the knapsack particle problem, 4000 particles. Graph shows global fitness}
 \end{center}
 
@@ -176,7 +176,7 @@ It's pretty interesting to see the different runs. The run where $C_1$ and $C_2$
 \subsection{Task c}
 \begin{figure}[H]
 \begin{center}
-\includegraphics[width=18cm]{KnapSack_withInteria}
+\includegraphics[width=\linewidth]{KnapSack_withInteria}
 \caption{3 runs of the knapsack particle problem, 4000 particles, decreasing inertia weight. Graph shows global fitness}
 \end{center}
 \end{figure}
