--- a/report/aiprog3Report.tex
+++ b/report/aiprog3Report.tex
@@ -186,7 +186,7 @@ It's pretty interesting to see the different runs. The run where $C_1$ and $C_2$
 The Knapsack PSO problem from Task \ref{3} is extended with random volume values for each package. These values range from $1m^3$ to $5m^3$, however due to a notice on It's learning we decreased the max volume from $1000m^3$ to $250m^3$.
 \begin{figure}[H]
 \begin{center}
-\includegraphics[width=18cm]{KnapSack_Volume}
+\includegraphics[width=\linewidth]{KnapSack_Volume}
 \caption{2 runs of knapsack PSO with volume restrictions one with decreasing inertia, one with static inertia weight}
 \end{center}
 
