added more text

--- a/report/aiprog3Report.tex
+++ b/report/aiprog3Report.tex
@@ -124,7 +124,7 @@ Run \# & Global fitness& Iterations\\ \hline
 \caption{10 runs of the 2D circle problem}
 \end{center}
 \end{figure}
-As we can see in this table; it takes more iterations to find the rooster/goal for the particles than in the 1D circle problem due to the extra dimension added.
+As we can see in this table; it takes more iterations to find the rooster/goal for the particles than in the 1D circle problem due to the extra dimension added - this adds more search space so it takes more time for the particles to find the goal.
 
 \section{Task 2}
 This task uses k-nearest neighbor topology. The particles will only update the $\vec{g}$ based on its 3 nearest neighbor's $\vec{g}$. 
