--- a/report/aiprog3Report.tex
+++ b/report/aiprog3Report.tex
@@ -65,7 +65,7 @@
 \newpage
  
 \section{PSO problem Task 1}
-For this assignment we decided to use 100 particles, the lecturer said in a lecture that it doesn't really matter how many particle we use as long as we have more than a 10 particles.
+For this assignment we decided to use 100 particles, the lecturer mentioned in a lecture that it doesn't really matter how many particle we use as long as we have more than a 10 particles.
 Every particle updates their velocity vector based on this formula:
 \begin{center}
 $\vec{v}(t+1)=\vec{v}(t)+(c_1*r_1*(\vec{p}(t)-\vec{x}(t))) +(c_2*r_2*(\vec{g}(t)-\vec{x}(t)))$
@@ -134,7 +134,7 @@ This task uses k-nearest neighbor topology. The particles will only update the $
 \begin{figure}[H]
 
 \includegraphics[width=\linewidth]{3nn_no_inertia}
-\caption{runs of 1d and 2d problem with 3 nearest neighbor topology, no decreasing inertia weight\\
+\caption{runs of 1d and 2d problem with 3 nearest neighbor topology, no decreasing inertia weight
 Magenta small line is 1d, Blue one is 2d}
 
 
