--- a/report/aiprog3Report.tex
+++ b/report/aiprog3Report.tex
@@ -150,7 +150,7 @@ $ for each iteration.
 Magenta small line is 1d, Blue one is 2d}
 \end{center}
 \end{figure}
-The decreasing of the inertia helps immensely to find the goal, the particles will (if allowed to run for that long) all converge to the goal if the inertia weight is decreasing or less than 1. We tried with inertia weight 0.7298 which made all the converge pretty fast (can't remember the number of iterations exactly, but somewhere around 50-100 iterations).
+The decreasing inertia weight helps the particles find the goal faster. The particles will (if allowed to run for that long) all converge to the goal if the inertia weight is decreasing or less than 1. We tried with inertia weight 0.7298 which made all of them converge to the goal point quite fast (around 50-100 iterations).
 
 \section{Task 3}\label{3}
 For this task we decided to use the binary knapsack solution as suggested by the lecturer. Every particle has n dimensions (where n is number of packages) and for every dimension there's either a position 0 or 1 that shows if the package is included or not.
